[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/pp/pp_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Source/Actors/PlayerSM.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 58 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 0, -5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 4 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2
frame = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 5 )
current = true
limit_left = 0
limit_top = -720
limit_bottom = 720

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="StateMachine" type="Node2D" parent="."]
position = Vector2( 1, 4 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="StateMachine"]
margin_left = -20.0
margin_top = -80.0
margin_right = 20.0
margin_bottom = -66.0

[node name="Raycasts" type="Node2D" parent="."]
position = Vector2( 1, 4 )

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( -32, 53 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 53 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 32, 53 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="WallJumpTimers" type="Node2D" parent="."]
position = Vector2( 1, 4 )

[node name="RightTimer" type="Timer" parent="WallJumpTimers"]
one_shot = true

[node name="LeftTimer" type="Timer" parent="WallJumpTimers"]
one_shot = true
